--- a/index.html
+++ b/index.html
@@ -5,11 +5,94 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Acompanhamento PDV 0.1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        body{
+            background-color: bisque;
+        }
+
+        #organizacao{
+            display: flex;
+            flex-direction: column;
+            padding: 8vw;
+        }
+
+        #cabecalho{
+            display: flex;
+            flex-direction: column;
+            align-self: center;
+        }
+
+        h1{
+            margin: 10px 0 0 0;
+            color:brown;
+            align-self: flex-end;
+        }
+
+        h2{
+            margin: 0;
+            color: maroon;
+            font-size: 1.0em;
+            font-weight: 100;
+            font-style: italic;
+            align-self: flex-end;
+        }
+
+        #bloco-central{
+            display: flex;
+            flex-direction: column;
+            height: 70vh;
+            margin: 5vh;
+            background-color: rgb(255, 231, 163);
+            border: solid 5px rgb(255, 213, 134);
+        }
+
+        #botao-entrar{
+            width: 100%;
+        }
+
+        .botao{
+            text-align: center;
+            text-decoration: none;
+            font-size: 1.8em;
+        }
+
+        .forma{
+            width: 100%;
+            display: block;
+            padding: 10px 30px;
+            border-radius: 10px;
+            color: #fff;
+            background-color: orange;
+            box-sizing: border-box;
+        }
+
+        #link-senha{
+            padding: 20px 0;
+            font-size: 1.2em;
+            align-self: center;
+        }
+
+    </style>
     <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
     <!-- <script src='main.js'></script> -->
 </head>
 <body>
-    <p>Este é um teste de envio</p>
-    <a href="google.com">Link</a>
+    <div id="organizacao">
+        <div id="cabecalho">
+            <h1>Acompanhamento de PDV</h1>
+            <h2>Versão 1.0.0</h2>
+        </div>
+        <div id="bloco-central">
+            <div id="campos">
+                
+            </div>
+            <div id="botao-entrar">
+                <a href="" class="botao forma">Entrar</a>
+            </div>
+            <div id="link-senha">
+                <a href="">Esqueci ou não possuo uma senha</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
