estrutura de servidor em andamento

--- a/relatorio.html
+++ b/relatorio.html
@@ -5,217 +5,16 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
-    <!-- <script src='main.js'></script> -->
-    <style>
-        *{
-            box-sizing: border-box;
-            /* border: solid 0.1px #EEE; */
-        }
-        body{
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            background-color: honeydew;
-        }
-        
-        .texto-barra{
-            color: white;
-            font-weight: 500;
-        }
-        
-        .bkg-barra{
-            background-color: orange;
-        }
-
-        #barra-superior{
-            padding: 5px 5px 10px;
-            width: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-
-        #barra-superior label{
-            height: 100%;
-            font-size: 8vw;
-            text-align: left;
-            flex-grow: 1;
-        }
-
-        #barra-superior img{
-            height: 10vw;
-            /* align-self: center; */
-        }
-
-        #bloco-texto{
-            font-size: 4vw;
-            font-family: monospace;
-            font-weight: 600;
-            color: #222;
-            padding: 10px;
-            flex-grow: 1;
-            overflow: scroll;
-        }
-
-        #barra-inferior{
-            display: grid;
-            width: 100%;
-            padding: 0px 10px;
-            grid-template-columns: 60% 40%;
-            grid-template-rows: 70% 30%;
-            align-self: flex-end;
-        }
-
-        #total{
-            font-size: 8vw;
-            grid-column-start: 1;
-            grid-column-end: 2;
-            grid-row-start: 1;
-            grid-row-end: 2;
-        }
-
-        #atualizacao{
-            font-size: 3vw;
-            grid-column-start: 1;
-            grid-column-end: 2;
-            grid-row-start: 2;
-            grid-row-end: 3;
-        }
-        #saldo{
-            font-size: 7vw;
-            text-align: end;
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 3;
-        }
-
-    </style>
+    <link rel='stylesheet' type='text/css' media='screen' href='src/relatorio.css'>
+    <script src='src/relatorio.js'></script>
 </head>
 <body>
-    <div id="barra-superior" class="texto-barra bkg-barra">
+    <div id="barra-superior" class="texto-barra bkg-barra sombra">
         <label>Relatório de Caixas</label>
         <img src="src/img/sair.png" alt="[sair]">
     </div>
     <div id="bloco-texto">
         <pre>
-========================================
-
-001 - PADOCA DELIKATESSENS DE ALIMENTOS 
-        DEMONSTRATIVO DE VENDAS         
-
-RELATORIO POR:ABERTURA DE CAIXA
-ABERTURA: 09/03/2020 15:55:30
-CAIXA NAO FECHADO
-ULTIMO REGISTRO:
-VENDA: 09/03/2020 15:56:17
-OPERADOR: 025 - JOSELE
-PDV: 004
-========================================
-
-            MOVIMENTO GERAL             
-                         VALOR  QTD.DOCS
-VENDA BRUTA              59,96         4
-CANC. CUPONS              0,00         0
-CANC. ITENS               0,00         0
-DESC. NOS ITENS           0,00         0
-TX SERVICOS               0,00
-                   -----------
-VENDA LIQUIDA (L)        59,96         4
-
-TOTAL DE ATENDIMENTOS                  4
-TICKET MEDIO VENDA BRUTA           14,99
-TICKET MEDIO VENDA LIQUIDA         14,99
-TICKET MEDIO ITENS                     1
-========================================
-
-             DEMONSTRATIVO              
-           -------
-(+)BRUTO     59,96     0
-----------------------------------------
-(+)CANCELAMEN 0,00
-   DEVOLUCOES 0,00
-(-)DESCONTOS VALOR    PRODUTOS     MEDIA
-              0,00         0
-(-)TX SERVICO 0,00
-           -------
-(=)LIQUIDO   59,96
-(-)CUSTO     20,00
-----------------------------------------
-(-)RESULTADO 39,96
-========================================
-
-   COMPARATIVO (FECHAMENTO X VENDAS)    
-            FECHAMENTO     VENDAS
-            ----------     ------
-(+) DIN           0,00      59,96 (4)
-                ------     ------
-(=) SUBTOTAL      0,00      59,96 (4)
-(+) CRED          0,00       0,00 (0)
-                ------     ------
-(=) TOTAL         0,00      59,96 (4)
-DIFERENCA(FECHAMENTO - VENDAS)
-                 DIFERENCA     %TP VENDA
-(+) DIN             -59,96          0,00
-========================================
-
-             SALDO DE CAIXA             
-ENTRADA
- +ABERTURA                        0,00
- +SUPRIMENTO                      0,00
- +BAIXA CRED                      0,00
- +VENDAS                         59,96
-                               -------
-TOTAL(E)                         59,96
-
-SAIDAS
- -SANGRIAS                        0,00
- -DESPESAS                        0,00
- -VALES                           0,00
-                               -------
-TOTAL(S)                          0,00
-
-SALDO CAIXA (E-S)                59,96
-
-FECH. CAIXA                       0,00
-
-DIF CAIXA                       -59,96
-========================================
-
-  DEMONSTRATIVO POR FORMA DE PAGAMENTO  
-TIPO DE PAGAMENTO        VALOR   PARTIC%
------------------        -----   -------
-A VISTA
-DINHEIRO                 59,96    100,00
-                       -------
-TOTAL                    59,96
-
-A PRAZO
-                       -------
-TOTAL                     0,00
-
-TOTAL GERAL              59,96
-========================================
-
-  DEMONSTRATIVO DE MOVIMENTO POR LINHA  
-
-LINHA        PRODUTOS    VALOR   PARTIC%
------        --------    -----   -------
-PADARIA         4,000    59,96    100,00
-========================================
-
-  DEMONSTRATIVO DE MOVIMENTO POR HORA   
-HORA         PRODUTOS    VALOR   ATENDIM
-----       ----------    -----   -------
-15:00-15:59     2,000    29,98         2
-16:00-16:59     2,000    29,98         2
-========================================
-        Emitido por 025 - JOSELE        
-         Em 09/03/2020 17:46:10         
-==========FIM DO DEMONSTRATIVO==========
         </pre>
     </div>
     <div id="barra-inferior" class="texto-barra bkg-barra">
