--- a/index.html
+++ b/index.html
@@ -5,132 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Acompanhamento PDV 0.1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <style>
-        *{
-            /* border: solid 0.1px #EEE; */
-            box-sizing: border-box;
-        }
-
-        body{
-            background-color: bisque;
-        }
-
-        #organizacao{
-            display: flex;
-            padding: 10vh 10vw;
-            flex-direction: column;
-        }
-
-        #cabecalho{
-            display: flex;
-            flex-direction: column;
-            align-self: center;
-        }
-
-        .titulo{
-            margin: 0;
-            font-size: 5.5vw;
-            font-weight: 700;
-            color:brown;
-            align-self: flex-end;
-        }
-
-        .versao{
-            margin: 0;
-            font-size: 3.0vw;
-            font-weight: 100;
-            color: maroon;
-            font-style: italic;
-            align-self: flex-end;
-        }
-
-        #bloco-central{
-            display: flex;
-            margin: 5vh;
-            padding: 8vh 10vw;
-            max-width: 420px;
-            flex-direction: column;
-            background-color: rgb(255, 231, 163);
-            border: solid 5px rgb(255, 213, 134);
-            align-self: center;
-        }
-
-        #botao-entrar{
-            width: 100%;
-        }
-
-        .botao{
-            font-size: 1.8em;
-            text-align: center;
-            text-decoration: none;
-            display: block;
-            padding: 10px 30px;
-            width: 100%;
-            border-radius: 10px;
-            color: #fff;
-            background-color: orange;
-            box-sizing: border-box;
-        }
-
-
-        .grupo-campo{
-            display: flex;
-            margin: 14px 0;
-            height: 40px;
-        }
-
-        .icone{
-            display: block;
-            height: 100%;
-            width: 40px;
-            min-width: 40px;
-            border-left: solid 1px rgb(180, 180, 180);
-            border-top: solid 1px rgb(180, 180, 180);
-            border-bottom: solid 1px rgb(180, 180, 180);
-            border-radius: 10px 0px 0px 10px;
-            background-color: lightgray;
-        }
-
-        .entrada-dados{
-            min-width: 160px;
-            padding: 5px;
-            height: 100%;
-            border: solid 1px rgb(180, 180, 180);
-            border-radius: 0px 10px 10px 0px;
-            flex-grow: 1;
-        }
-
-        .grupo-campo img{
-            padding: 10px;
-            max-width: 100%;
-        }
-
-        #link-senha{
-            padding: 20px 0;
-            font-size: 2.7vw;
-            align-self: center;
-        }
-
-        @media (min-width: 700px){
-            .titulo{
-                font-size: 38.5px;
-            }
-            .versao{
-                font-size: 21px;
-            }
-            #bloco-central{
-                padding: 52px 70px;
-            }
-        }
-
-        @media (min-width: 600px){
-            #link-senha{
-                font-size: 16px;
-            }
-        }
-        
-    </style>
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
+    <link rel='stylesheet' href='src/main.css'>
     <!-- <script src='main.js'></script> -->
 </head>
 <body>
@@ -158,7 +33,7 @@
                 </div>
             </form>
             <div id="botao-entrar">
-                <a href="" class="botao forma">Entrar</a>
+                <a href="relatorio.html" class="botao forma">Entrar</a>
             </div>
             <div id="link-senha">
                 <a href="">Esqueci ou não possuo uma senha</a>
