versão não funcional do login

--- a/app/nav/relatorio.html
+++ b/app/nav/relatorio.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='src/relatorio.css'>
-    <script src='src/relatorio.js'></script>
-</head>
-<body>
+<div id="body-relatorio">
+
     <div id="barra-superior" class="texto-barra bkg-barra sombra">
         <label>Relatório de Caixas</label>
-        <img src="src/img/sair.png" alt="[sair]">
+        <img id="icone-sair" src="img/sair.png" alt="[sair]">
     </div>
     <div id="bloco-texto">
-        <pre>
+        <pre id="relatorio">
         </pre>
     </div>
     <div id="barra-inferior" class="texto-barra bkg-barra">
@@ -26,5 +17,4 @@
         </label>
         <label id="saldo">R$ 2.708,45</label>
     </div>
-</body>
-</html>
+</div>
