--- a/app/nav/login.html
+++ b/app/nav/login.html
@@ -1,10 +1,10 @@
-<div id="organizacao">
+<div id="body-login">
     <div id="cabecalho">
         <label class="titulo">Acompanhamento de PDV</label>
         <label class="versao">Versão 0.1.0</label>
     </div>
     <div id="bloco-central">
-        <form id="campos" name="loginForm" action="login" method="post">
+        <form id="campos" name="formLogin" action="login" method="post">
             <div class="grupo-campo">
                 <div class="icone">
                     <img src="./img/usuario.png" alt="">
