atualização e correção do login

--- a/app/nav/relatorio.html
+++ b/app/nav/relatorio.html
@@ -10,11 +10,7 @@
     </div>
     <div id="barra-inferior" class="texto-barra bkg-barra">
         <label id="total">Total</label>
-        <label id="atualizacao">
-            <i>
-                Posição de saldos às 13:32
-            </i>
-        </label>
-        <label id="saldo">R$ 2.708,45</label>
+        <label id="atualizacao"></label>
+        <label id="saldo"></label>
     </div>
 </div>
