--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Acompanhamento PDV 0.1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='main.css'>
+    <link rel='stylesheet' href='app.css'>
     <script src='app.js'></script>
 </head>
 <body>
