--- a/frontend/assets/html/login.html
+++ b/frontend/assets/html/login.html
@@ -1,3 +1,4 @@
+<link rel='stylesheet' href='assets/css/login.css'>
 <div id="body-login">
     <div id="cabecalho">
         <label class="titulo">Acompanhamento de PDV</label>
@@ -7,7 +8,7 @@
         <form id="campos" name="formLogin" action="login" method="post">
             <div class="grupo-campo">
                 <div class="icone">
-                    <img src="./img/usuario.png" alt="">
+                    <img src="assets/img/usuario.png" alt="">
                 </div>
                 <input id="usuario" class="entrada-dados"
                     name="usuario" type="text" placeholder="Identificação">
@@ -15,7 +16,7 @@
             </div>
             <div class="grupo-campo">
             <div class="icone">
-                <img src="./img/pass.png" alt="">
+                <img src="assets/img/pass.png" alt="">
             </div>
                 <input id="senha" class="entrada-dados" 
                     name="senha" type="password" placeholder="digite sua senha">
