--- a/frontend/assets/html/relatorio.html
+++ b/frontend/assets/html/relatorio.html
@@ -1,8 +1,9 @@
+<link rel='stylesheet' href='assets/css/relatorio.css'>
 <div id="body-relatorio">
 
     <div id="barra-superior" class="texto-barra bkg-barra sombra">
         <label>Relatório de Caixas</label>
-        <img id="icone-sair" src="img/sair.png" alt="[sair]">
+        <img id="icone-sair" src="assets/img/sair.png" alt="[sair]">
     </div>
     <div id="bloco-texto">
         <pre id="relatorio">
