--- a/frontend/assets/html/relatorio.html
+++ b/frontend/assets/html/relatorio.html
@@ -1,17 +1,11 @@
 <link rel='stylesheet' href='assets/css/relatorio.css'>
 <div id="body-relatorio">
-
-    <div id="barra-superior" class="texto-barra bkg-barra sombra">
+    <div id="barra-superior" class="sombra">
         <label>Relatório de Caixas</label>
         <img id="icone-sair" src="assets/img/sair.png" alt="[sair]">
     </div>
-    <div id="bloco-texto">
+    <div id="bloco-relatorio">
         <pre id="relatorio">
         </pre>
-    </div>
-    <div id="barra-inferior" class="texto-barra bkg-barra">
-        <label id="total">Total</label>
-        <label id="atualizacao"></label>
-        <label id="saldo"></label>
     </div>
 </div>
