--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+    <meta name="theme-color" content="#1C77C3">
+    <title>Acompanhamento i9PDV</title>
   </head>
   <body>
     <noscript>
-      <strong>Lamentamos, mas <%= htmlWebpackPlugin.options.title %> depende da habilitação de JavaScript em seu nagevador. Habilite-o para continuar.</strong>
-    </noscript>
+      <strong>Lamentamos, mas esta aplicação depende da habilitação de JavaScript em seu nagevador. Habilite-o para continuar.</strong>
+    </noscript> 
     <div id="app"></div>
     <!-- Arquivos serão injetados aqui -->
   </body>
