--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,10 @@
     <noscript>
       <strong>Lamentamos, mas esta aplicação depende da habilitação de JavaScript em seu nagevador. Habilite-o para continuar.</strong>
     </noscript> 
+    <script src='js/fetch.js'></script>
+    <script src='js/promise.js'></script>
+    <script src='js/idb.js'></script>
+    <script src='js/indexDB.js'></script>
     <div id="app"></div>
     <!-- Arquivos serão injetados aqui -->
   </body>
