--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <noscript>
-      <strong>Lamentamos, mas esta aplicação depende da habilitação de JavaScript em seu nagevador. Habilite-o para continuar.</strong>
+      <link rel="preload" href="/public/html/noScript.html">
     </noscript> 
     <script src='js/fetch.js'></script>
     <script src='js/promise.js'></script>
