--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="manifest" href="<%= BASE_URL %>manifest.json">
-    <meta name="theme-color" content="#1C77C3">
+    <meta name="theme-color" content="#00A7E1">
     <title>Acompanhamento i9PDV</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
     <noscript>
-      <link rel="preload" href="/public/html/noScript.html">
+      <link href="./html/noscript.html">
     </noscript> 
     <script src='js/fetch.js'></script>
-    <script src='js/promise.js'></script>
     <script src='js/idb.js'></script>
     <script src='js/indexDB.js'></script>
     <div id="app"></div>
