--- a/frontend/public/html/noScript.html
+++ b/frontend/public/html/noScript.html
@@ -1,11 +1,16 @@
-<html lang="pt-BR">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <meta name="Description" content="Author: Erick da Mata,
+      Empresa: Nova Tech Ltda, Categoria: PWA, Criação: 02/05/2020,
+      Descrição: Página explicando o necessidade do uso de JavaScript.">
 </head>
 <body>
     <div class="ns-info">
-        <svg class="info-el" style="width:24px;height:24px" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z" />
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48pt" height="48pt" viewBox="0 0 48 48" version="1.1">
+            <g id="infosvg">
+                <path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,100%,100%);fill-opacity:1;" d="M 22 18 L 26 18 L 26 14 L 22 14 M 24 40 C 15.179688 40 8 32.820312 8 24 C 8 15.179688 15.179688 8 24 8 C 32.820312 8 40 15.179688 40 24 C 40 32.820312 32.820312 40 24 40 M 24 4 C 12.960938 4 4 12.960938 4 24 C 4 35.039062 12.960938 44 24 44 C 35.039062 44 44 35.039062 44 24 C 44 12.960938 35.039062 4 24 4 M 22 34 L 26 34 L 26 22 L 22 22 Z M 22 34 "/>
+            </g>
         </svg>
         <h2 class="info-el info-text">
             JavaScript desabilitado
@@ -60,17 +65,24 @@ body{
     margin: 0;
     justify-content: space-between;
     color: #000;
+    font-size: 30px;
 }
 
+
 .ns-info{
+    display: flex;
     background-color: #00A7E1;
-    padding-left: 25px;
+    padding: 20px 0px 0px 25px;
     color: #FFFFFF;
 }
+
+#infosvg{
+    padding-top: 15px;
+}
+
 .info-el{
     display: inline-block;
-    vertical-align: middle;
-    padding: 2;
+    align-self: center;
 }
 
 
