--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html> 
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="Description" content="Author: Erick da Mata,
+      Empresa: Nova Tech Ltda, Categoria: PWA, Criação: 02/05/2020,
+      Descrição: Aplicação para visualização de relatórios de PDV">
+      
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="manifest" href="<%= BASE_URL %>manifest.json">
-    <meta name="theme-color" content="#00A7E1">
-    <title>Acompanhamento i9PDV</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#00a7e1">
+    <link rel="shortcut icon" href="img/icons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Nova Tech PDV">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="application-name" content="Nova Tech PDV">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="msapplication-TileImage" content="img/icons/mstile-144x144.png">
+    <meta name="msapplication-config" content="img/icons/browserconfig.xml">
+    <meta name="theme-color" content="#00a7e1">
+
+    <title>Nova Tech PDV</title>
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
     <noscript>
-      <link href="./html/noscript.html">
+      <link href="<%= BASE_URL %>/html/noscript.html">
     </noscript> 
-    <script src='js/fetch.js'></script>
+    <script src='js/fetch.js'></script> 
     <script src='js/idb.js'></script>
     <script src='js/indexDB.js'></script>
     <div id="app"></div>
