--- a/frontend/public/html/noScript.html
+++ b/frontend/public/html/noScript.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Description" content="Author: Erick da Mata,
-      Empresa: Nova Tech Ltda, Categoria: PWA, Criação: 02/05/2020,
+      Empresa: i9PDV Ltda, Categoria: PWA, Criação: 02/05/2020,
       Descrição: Página explicando o necessidade do uso de JavaScript.">
 </head>
 <body>
@@ -46,7 +46,7 @@
     <div class="ns-info-suporte">
         <p>
             <strong>
-                <br>Suporte Nova Tech<br/><a href="tel:+55-21-2234-5678">(21) 2234-5678</a></strong>
+                <br>Suporte i9PDV<br/><a href="tel:+55-21-2234-5678">(21) 2234-5678</a></strong>
             </strong>
         </p>
     </div>
@@ -109,7 +109,6 @@ body{
 .link{
     padding: 5px 30px 30px 30px;
 }
-
 .ns-info-suporte{
     text-align: center;
     font-weight: 800;
