--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="Description" content="Author: Erick da Mata,
-      Empresa: Nova Tech Ltda, Categoria: PWA, Criação: 02/05/2020,
+      Empresa: i9PDV Ltda, Categoria: PWA, Criação: 02/05/2020,
       Descrição: Aplicação para visualização de relatórios de PDV">
       
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
@@ -17,27 +17,30 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
     <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#00a7e1">
     <link rel="shortcut icon" href="img/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="Nova Tech PDV">
+    <meta name="apple-mobile-web-app-title" content="i9PDV">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="application-name" content="Nova Tech PDV">
+    <meta name="application-name" content="i9PDV">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="msapplication-TileImage" content="img/icons/mstile-144x144.png">
     <meta name="msapplication-config" content="img/icons/browserconfig.xml">
     <meta name="theme-color" content="#00a7e1">
 
-    <title>Nova Tech PDV</title>
+    <title>i9PDV</title>
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.8.95/css/materialdesignicons.css">
   </head>
   <body>
-    <noscript>
-      <link href="<%= BASE_URL %>/html/noscript.html">
-    </noscript> 
     <script src='js/fetch.js'></script> 
     <script src='js/idb.js'></script>
     <script src='js/indexDB.js'></script>
     <div id="app"></div>
     <!-- Arquivos serão injetados aqui -->
+    <noscript>
+      <div class="ns-info"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48pt" height="48pt" viewBox="0 0 48 48" version="1.1"><g id="infosvg"><path style="stroke:none;fill-rule:nonzero;fill:rgb(100%,100%,100%);fill-opacity:1" d="M 22 18 L 26 18 L 26 14 L 22 14 M 24 40 C 15.179688 40 8 32.820312 8 24 C 8 15.179688 15.179688 8 24 8 C 32.820312 8 40 15.179688 40 24 C 40 32.820312 32.820312 40 24 40 M 24 4 C 12.960938 4 4 12.960938 4 24 C 4 35.039062 12.960938 44 24 44 C 35.039062 44 44 35.039062 44 24 C 44 12.960938 35.039062 4 24 4 M 22 34 L 26 34 L 26 22 L 22 22 Z M 22 34 "/></g></svg><h2 class="info-el info-text">JavaScript desabilitado</h2></div><h2>&nbsp;</h2><div class="centro"><div class="ns-card"><div class="ns-titulo"><h1>Preciso habilitar <em>scripts</em>?</h1></div><p style="text-align:justify;padding:30px">&nbsp; &nbsp; &nbsp;Atualmente quase todas as páginas da internet contém JavaScript, uma linguagem de programação que é executada em seu navegador. Esta aplicação depende da habilitação de JavaScript para seu funcionamento, e se estiver desabilitada por alguma razão, sua aplicação não irá funcionarAqui você encontra instruções sobre como habilitar (ativar) o JavaScript em seu navegador:</p><p class="link"><a title="Como habilitar o JavaScript no seu navegador" href="https://www.enable-javascript.com/pt/" target="_blank" rel="noopener">https://www.enable-javascript.com/pt/</a></p></div></div><p>&nbsp;</p><div class="ns-info-suporte"><p><strong><br>Suporte i9PDV<br><a href="tel:+55-21-2234-5678">(21) 2234-5678</a></strong></p></div>
+    </noscript> 
   </body>
 </html>
+
+<noscript><style>html{padding:0}body{display:flex;flex-direction:column;background:#D6EDFF;padding:0;margin:0;justify-content:space-between;color:#000;font-size:30px}.ns-info{display:flex;background-color:#00A7E1;padding:20px 0 0 25px;color:#FFF}#infosvg{padding-top:15px}.info-el{display:inline-block;align-self:center}.ns-titulo{color:#000}.centro{justify-content:center;display:flex}.ns-card{-webkit-box-shadow:2px 5px 15px 0 #d3d3d3;box-shadow:2px 5px 15px 0 #d3d3d3;padding:5px 30px;margin:0 50px;max-width:800px;background:#FFF;border-top:5px solid #1C6EA4;border-radius:15px;align-self:center}.link{padding:5px 30px 30px 30px}.ns-info-suporte{text-align:center;font-weight:800;font-size:2em;padding:1vh 10vw}</style></noscript>
