--- a/frontend/public/html/noScript.html
+++ b/frontend/public/html/noScript.html
@@ -46,7 +46,7 @@
     <div class="ns-info-suporte">
         <p>
             <strong>
-                <br>Suporte Nova Tech PDV<br/><a href="tel:+55-21-2234-5678">(21) 2234-5678</a></strong>
+                <br>Suporte i9PDV<br/><a href="tel:+55-21-97629-8786">(21) 97629-8786</a></strong>
             </strong>
         </p>
     </div>
